RESOLVED FIXED225305
PerformanceObserver: buffered flag not working in Paint Timing
https://bugs.webkit.org/show_bug.cgi?id=225305
Summary PerformanceObserver: buffered flag not working in Paint Timing
Nicolas
Reported 2021-05-03 07:34:39 PDT
The PerformanceObserver's buffered flag is implemented and works in, for instance, Resource Timing. But it does not seem to work in Paint Timing. Test: go to any website, let it load, then run this on the console: new PerformanceObserver((l)=>console.log(l.getEntries())).observe({type:'paint', buffered: true}) It is expected to show the Paint Timing entry, but it does not work. See https://github.com/GoogleChrome/web-vitals/pull/139 for more info.
Attachments
Patch (45.01 KB, patch)
2022-02-10 01:58 PST, Noam Rosenthal
no flags
Patch (44.54 KB, patch)
2022-02-10 04:14 PST, Noam Rosenthal
no flags
Patch (5.35 KB, patch)
2022-02-11 04:50 PST, Noam Rosenthal
no flags
Patch (3.06 KB, patch)
2022-02-17 22:50 PST, Noam Rosenthal
no flags
Radar WebKit Bug Importer
Comment 1 2021-05-10 07:35:17 PDT
Noam Rosenthal
Comment 2 2022-02-09 10:05:46 PST
*** Bug 236155 has been marked as a duplicate of this bug. ***
Noam Rosenthal
Comment 4 2022-02-10 01:58:37 PST
EWS Watchlist
Comment 5 2022-02-10 02:01:11 PST
This patch modifies the imported WPT tests. Please ensure that any changes on the tests (not coming from a WPT import) are exported to WPT. Please see https://trac.webkit.org/wiki/WPTExportProcess
Noam Rosenthal
Comment 6 2022-02-10 02:12:02 PST
(In reply to EWS Watchlist from comment #5) > This patch modifies the imported WPT tests. Please ensure that any changes > on the tests (not coming from a WPT import) are exported to WPT. Please see > https://trac.webkit.org/wiki/WPTExportProcess https://github.com/web-platform-tests/wpt/pull/32794
Noam Rosenthal
Comment 7 2022-02-10 04:14:01 PST
Simon Fraser (smfr)
Comment 8 2022-02-10 10:31:35 PST
Comment on attachment 451515 [details] Patch Please do the test import in a separate bug.
Noam Rosenthal
Comment 9 2022-02-11 04:50:48 PST
Noam Rosenthal
Comment 10 2022-02-16 02:02:02 PST
(In reply to Simon Fraser (smfr) from comment #8) > Comment on attachment 451515 [details] > Patch > > Please do the test import in a separate bug. Done, this only includes the relevant test.
Simon Fraser (smfr)
Comment 11 2022-02-16 09:49:30 PST
Comment on attachment 451675 [details] Patch If there is an existing test, then import the test first (with a failing result), then land the change. But it would be better to update the entire paint-timing test suite, then make the change.
Noam Rosenthal
Comment 12 2022-02-16 09:53:42 PST
(In reply to Simon Fraser (smfr) from comment #11) > Comment on attachment 451675 [details] > Patch > > If there is an existing test, then import the test first (with a failing > result), then land the change. But it would be better to update the entire > paint-timing test suite, then make the change. Alrighty.
Noam Rosenthal
Comment 13 2022-02-16 10:43:13 PST
(In reply to Noam Rosenthal from comment #12) > (In reply to Simon Fraser (smfr) from comment #11) > > Comment on attachment 451675 [details] > > Patch > > > > If there is an existing test, then import the test first (with a failing > > result), then land the change. But it would be better to update the entire > > paint-timing test suite, then make the change. > > Alrighty. https://bugs.webkit.org/show_bug.cgi?id=236717
Noam Rosenthal
Comment 14 2022-02-17 22:50:28 PST
Simon Fraser (smfr)
Comment 15 2022-02-21 09:31:42 PST
Comment on attachment 452484 [details] Patch Perfect.
EWS
Comment 16 2022-02-21 09:51:49 PST
Committed r290247 (?): <https://commits.webkit.org/r290247> All reviewed patches have been landed. Closing bug and clearing flags on attachment 452484 [details].
Note You need to log in before you can comment on or make changes to this bug.