PerformanceObserver: buffered flag not working in Paint Timing https://bugs.webkit.org/show_bug.cgi?id=225305 <rdar://problem/77746237>

Reviewed by Simon Fraser.

LayoutTests/imported/w3c:

* web-platform-tests/paint-timing/fcp-only/buffered-flag.window-expected.txt: This test now passes

Source/WebCore:

Include paint entries when collecting buffered performance entries.

A previously failing W3C test is now marked as passing.

* page/Performance.cpp:
(WebCore::Performance::appendBufferedEntriesByType const): Add the existing FCP entry



Canonical link: https://commits.webkit.org/247572@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290247 268f45cc-cd09-0410-ab3c-d52691b4dbfc